# sremedios.github.io

./: .cv.html.swp  .gitignore  404.html  Gemfile  README.md  _config.yml  about.md  bootstrap_drawing.js  cv.html  drawing.js  feed.xml  footer.html  header.html  index.html  index.js  index.md  navbar.html  package-lock.json  package.json  posts.md  publications.md  publications.yml  robots.txt  sitemap.xml  wasm_test.html  wasm_test2.html  webpack.config.js
.github/workflows/: deploy.yml
_bibliography/: bookchapters.bib  books.bib  conf.bib  inprep.bib  invitedtalks.bib  journal.bib  posters.bib  talks.bib  theses.bib
_data/: citations.yml  navigation.yml  socials.yml
_pages/: about.md  cv.md  publications.md
_pages/dropdown/: index.html
_posts/: 2023-10-01-introducing-our-lab.md  2023-11-01-placeholder-blog.md
_sass/: _base.scss  _themes.scss
_site/: README.md  index.html  sitemap.xml
about/: index.html
assets/bib/: conf.bib  (+1 more)
blog/: index.html
books/: index.html
css/: .w3.css.swp  w3.css
cv/: index.html
news/: announcement_1.html  announcement_2.html  announcement_3.html  index.html
people/: index.html
projects/: 1_project.html  2_project.html  3_project.html  4_project.html  5_project.html  6_project.html  7_project.html  8_project.html  9_project.html  index.html
publications/: index.html
qa/: Cargo.toml  LICENSE_MIT
qa/pkg/: package.json  qa.d.ts  qa_bg.js  qa_bg.wasm.d.ts
qa/src/: lib.rs
repositories/: index.html
teaching/: index.html
wasm/: qa.d.ts  qa.js  qa_bg.wasm  qa_bg.wasm.d.ts
www/: index.html  package-lock.json
(+96 files in other folders)
