[package]
name = "qa"
version = "0.1.0"
authors = ["sremedios <sam.remedios@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
base64 = "0.13.0"
image = "0.23.12"
ndarray = "0.13.1"
ndarray-stats = "0.3"
nifti = { version = "0.9", features = ["ndarray", "ndarray_volumes"] }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2.25"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
# wee_alloc = { version = "0.4.2", optional = true }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-mutable-globals"]

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Window",
    "CanvasRenderingContext2d",
    "ImageData",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "console",
    "CssStyleDeclaration",
    "EventTarget",
]
